--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -8,8 +8,6 @@ jobs:
     runs-on: windows-latest
     
     steps:
-    - run: Invoke-WebRequest https://download.unity3d.com/download_unity/59ddc4c59b4f/Windows64EditorInstaller/UnitySetup64-2018.4.12f1.exe -o UnitySetup64.exe
-    - run: dir
-    - run: mkdir C:\U
-    - run: Start-Process -FilePath UnitySetup64.exe -ArgumentList "-UI=reduced" "/D=C:\U\" -Wait
-    - run: dir "C:\U"
+    - run: |
+      gem install u3d
+      u3d available
