--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -12,4 +12,4 @@ jobs:
     - run: |
         gem install u3d
         u3d install ${{ matrix.unity-version }} --packages Unity
-        u3d list
+    - run: dir "C:/Program Files/Unity_2018.4.12f1"
