--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -12,5 +12,26 @@ jobs:
     - run: |
         gem install u3d
         u3d install ${{ matrix.unity-version }} --packages Unity
-    - run: dir "C:/Program Files/Unity_2018.4.12f1"
-    - run: dir "C:/Program Files/Unity_2018.4.12f1/Editor"
+    - run: dir "C:/Program Files/${{ matrix.unity-version }}"
+    - run: \& 'C:/Program Files/${{ matrix.unity-version }}/Editor/Unity.exe' -quit -batchmode -nographics -logfile -createManualActivationFile
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ matrix.unity-version }}
+        release_name: Release Unity${{ matrix.unity-version }}
+        draft: false
+        prerelease: false
+    - name: Upload Release Asset
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+        asset_path: Unity_v${{ matrix.unity-version }}.alf
+        asset_name: Unity_v${{ matrix.unity-version }}.alf
+        asset_content_type: application/xml
