--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -14,7 +14,7 @@ jobs:
         u3d install ${{ matrix.unity-version }} --packages Unity
         u3d uninstall 2018.3.7f1
         u3d list
-        Start-Process -FilePath "C:\Program Files\Unity_${{ matrix.unity-version }}\Editor\Unity.exe" -ArgumentList -quit -batchmode -nographics -logfile -createManualActivationFile -Wait
+        u3d run -- -quit -batchmode -nographics -logfile -createManualActivationFile
 
     - name: Create Release
       id: create_release
