--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -7,16 +7,12 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        unity-version: [2018.4.12f1]
+        unity-version: [2018.4.13f1]
     steps:
     - run: |
         gem install u3d
         u3d install ${{ matrix.unity-version }} --packages Unity
-        u3d uninstall 2018.3.7f1
-        
-    - run: u3d list
-    
-    - run: Start-Process -FilePath "C:\Program Files\Unity_2018.4.12f1\Editor\Unity.exe" -ArgumentList "-quit -batchmode -nographics -logfile -createManualActivationFile" -Wait
+    - run: Start-Process -FilePath "C:\Program Files\Unity_${{ matrix.unity-version }}\Editor\Unity.exe" -ArgumentList "-quit -batchmode -nographics -logfile -createManualActivationFile" -Wait
 
     - name: Create Release
       id: create_release
