--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -4,33 +4,20 @@ on: [push]
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        unity-version: [2018.4.13f1]
+        unity-version: [2018.4.12f1]
     steps:
-    - run: |
-        gem install u3d
-        u3d install ${{ matrix.unity-version }} --packages Unity
-    - run: Start-Process -FilePath "C:\Program Files\Unity_${{ matrix.unity-version }}\Editor\Unity.exe" -ArgumentList "-quit -batchmode -nographics -logfile -createManualActivationFile" -Wait
-
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1.0.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ matrix.unity-version }}
-        release_name: Release Unity${{ matrix.unity-version }}
-        draft: false
-        prerelease: false
-    - name: Upload Release Asset
-      id: upload-release-asset 
-      uses: actions/upload-release-asset@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: Unity_v${{ matrix.unity-version }}.alf
-        asset_name: Unity_v${{ matrix.unity-version }}.alf
-        asset_content_type: application/xml
+    - run: wget -nv https://beta.unity3d.com/download/59ddc4c59b4f/UnitySetup-2018.4.12f1 -O UnitySetUp
+    - run: chmod +x UnitySetup
+    - run: echo y | ./UnitySetup \
+        --unattended \
+        --install-location=/opt/Unity \
+        --verbose \
+        --download-location=/tmp/unity
+    - run: rm UnitySetup && \
+        rm -rf /tmp/unity && \
+        rm -rf /root/.local/share/Trash/*
+    - run: ls -l /opt
+    - run: ls -l /opt/Unity
