--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -16,5 +16,4 @@ jobs:
         ls -l
         echo y | ./UnitySetUp --unattended --install-location=/opt/Unity --verbose --download-location=/tmp/unity --components=Unity
     - run: sudo rm UnitySetUp && sudo rm -rf /tmp/unity && sudo rm -rf /root/.local/share/Trash/*
-    - run: ls -l /opt
-    - run: ls -l /opt/Unity
+    - run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -logfile -createManualActivationFile || exit 0
