--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -9,12 +9,12 @@ jobs:
       matrix:
         unity-version: [2018.4.12f1]
     steps:
-    #- uses: pCYSl5EDgo/setup-unity@master
-     # with:
-      #  unity-version: 2018.4.13f1
-    - run: wget https://beta.unity3d.com/download/497f083a43af/UnitySetup -O UnitySetUp
-    - run: sudo chmod +x UnitySetUp
-    - run: ./UnitySetUp --unattended --install-location=/opt/Unity --verbose --download-location=/tmp/unity --components=Unity
+    - uses: pCYSl5EDgo/setup-unity@master
+      with:
+        unity-version: 2018.4.13f1
+    #- run: wget https://beta.unity3d.com/download/497f083a43af/UnitySetup -O UnitySetUp
+    #- run: sudo chmod +x UnitySetUp
+    #- run: ./UnitySetUp --unattended --install-location=/opt/Unity --verbose --download-location=/tmp/unity --components=Unity
     - run: ls -l
     - run: ls -l /opt/
     - run: ls -l /opt/Unity/
