--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -18,6 +18,8 @@ jobs:
     - run: ls -l
     - run: ls -l /opt/
     - run: ls -l /opt/Unity/
+    - run: ls -l /opt/Unity-${{ matrix.unity-version }}/
     - run: ls -l /opt/Unity/Editor/
+    - run: ls -l /opt/Unity-${{ matrix.unity-version }}/Editor/
     - run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -logfile -createManualActivationFile || exit 0
     - run: cat Unity_v${{ matrix.unity-version }}.alf
