--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -3,11 +3,11 @@ name: Create ALF File
 on: [push]
 
 jobs:
-  build:
+  build-ubuntu:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        unity-version: [2018.4.12f1]
+        unity-version: [2018.4.12f1, 2020.1.0a14]
     steps:
     - uses: pCYSl5EDgo/setup-unity@master
       with:
@@ -21,3 +21,17 @@ jobs:
     - run: ls -l /opt/Unity-${{ matrix.unity-version }}/Editor/
     - run: /opt/Unity-${{ matrix.unity-version }}/Editor/Unity -quit -batchmode -nographics -logfile -createManualActivationFile || exit 0
     - run: cat Unity_v${{ matrix.unity-version }}.alf
+
+  build-windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        unity-version: [2018.4.12f1, 2020.1.0a14]
+    steps:
+    - uses: pCYSl5EDgo/setup-unity@master
+      with:
+        unity-version: ${{ matrix.unity-version }}
+    - run: dir
+    - run: dir 'C:\Program Files\'
+    - run: dir 'C:\Program Files\Unity'
+    
