--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -30,7 +30,7 @@ jobs:
         unity-version: ${{ matrix.unity-version }}
     - run: dir 'C:\Program Files\Unity\Editor\'
     - run: mkdir C:\Unity
-    - run: Start-Process -FilePath 'C:\Program Files\Unity\Editor\Unity.exe' -ArgumentList '-quit -batchMode -nographics -logfile -createManualActivationFile'
+    - run: Start-Process -FilePath 'C:\Program Files\Unity\Editor\Unity.exe' -ArgumentList '-quit -batchMode -nographics -logfile -createManualActivationFile' -Wait
     - run: dir
     - run: cat Unity_v${{ matrix.unity-version }}.alf
     
