--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -31,6 +31,7 @@ jobs:
       uses: pCYSl5EDgo/setup-unity@master
       with:
         unity-version: ${{ matrix.unity-version }}
+    - run: dir C:\Unity\
     - run: dir 'C:\Unity\Editor\'
     - run: echo ${{ steps.z.outputs.id }}
     - run: C:\Unity\Editor\Unity.exe -quit -batchMode -nographics -logfile -createManualActivationFile
