--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -3,6 +3,14 @@ name: Create ALF File
 on: [push]
 
 jobs:
+  build-windows-test:
+    runs-on: windows-latest
+    steps:
+    - run: Invoke-WebRequest -Uri https://download.unity3d.com/download_unity/497f083a43af/Windows64EditorInstaller/UnitySetup64.exe -OutFile UnitySetup64.exe
+    - run: dir
+    - run: UnitySetup64.exe /S /D="C:\Program Files\Unity"
+    - run: Start-Process -FilePath "C:\Program Files\Unity\Editor\Unity.exe" -ArgumentList '-quit -batchMode -nographics -logfile -createManualActivationFile' -Wait
+    - run: dir
   build-windows:
     runs-on: windows-latest
     strategy:
