--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -15,8 +15,8 @@ jobs:
     runs-on: windows-latest
     steps:
     - run: Invoke-WebRequest -Uri https://download.unity3d.com/download_unity/497f083a43af/Windows64EditorInstaller/UnitySetup64.exe -OutFile UnitySetup64.exe
-    - run: ./UnitySetup64.exe /S /D="C:\Program Files\Unity"
-    - run: Start-Process -FilePath "C:\Program Files\Unity\Editor\Unity.exe" -ArgumentList '-quit -batchMode -nographics -logfile -createManualActivationFile' -Wait
+    - run: ./UnitySetup64.exe /UI=reduced /S /D="C:\Program Files\Unity_2018.4.13f1"
+    - run: Start-Process -FilePath "C:\Program Files\Unity_2018.4.13f1\Editor\Unity.exe" -ArgumentList '-quit -batchMode -nographics -logfile -createManualActivationFile' -Wait
     - run: dir
   build-windows:
     runs-on: windows-latest
