--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -16,9 +16,13 @@ jobs:
     steps:
     - shell: cmd
       run: bitsadmin /TRANSFER bj /download /priority normal https://download.unity3d.com/download_unity/497f083a43af/Windows64EditorInstaller/UnitySetup64.exe %CD%\UnitySetup64.exe
-    - run: ./UnitySetup64.exe /UI=reduced /S /D="C:\Program Files\Unity_2018.4.13f1"
+    - shell: cmd
+      run: |
+        dir
+        UnitySetup64.exe /UI=reduced /S /D=C:\Program Files\Unity_2018.4.13f1
     - run: dir "C:\Program Files\"
-    - run: Start-Process -FilePath "C:\Program Files\Unity_2018.4.13f1\Editor\Unity.exe" -ArgumentList '-quit -batchMode -nographics -logfile -createManualActivationFile' -Wait
+    - run: |
+        & 'C:\Program Files\Unity_2018.4.13f1\Editor\Unity.exe' -quit -batchMode -nographics -logfile -createManualActivationFile
     - run: dir
   build-windows:
     runs-on: windows-latest
