--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -10,7 +10,8 @@ jobs:
     - run: u3d install 2018.4.13f1 --packages Unity
     - run: dir
     - run: Start-Process -FilePath "C:\Program Files\Unity_2018.4.13f1\Editor\Unity.exe" -ArgumentList '-quit -batchMode -nographics -logfile -createManualActivationFile' -Wait
-    - run: dir
+    - run: cat Unity_v${{ matrix.unity-version }}.alf
+
   build-windows-test1:
     runs-on: windows-latest
     steps:
@@ -23,7 +24,8 @@ jobs:
     - run: dir "C:\Program Files\"
     - run: |
         & 'C:\Program Files\Unity_2018.4.13f1\Editor\Unity.exe' -quit -batchMode -nographics -logfile -createManualActivationFile
-    - run: dir
+    - run: cat Unity_v${{ matrix.unity-version }}.alf
+  
   build-windows:
     runs-on: windows-latest
     strategy:
@@ -39,7 +41,7 @@ jobs:
     - run: dir 'C:\Program Files\Unity\Editor\'
     - run: echo ${{ steps.z.outputs.id }}
     - run: Start-Process -FilePath "C:\Program Files\Unity\Editor\Unity.exe" -ArgumentList '-quit -batchMode -nographics -logfile -createManualActivationFile' -Wait
-    - run: dir
+    - run: cat Unity_v${{ matrix.unity-version }}.alf
     
   build-mac:
     runs-on: macOS-latest
