--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -10,7 +10,7 @@ jobs:
     - run: u3d install 2018.4.13f1 --packages Unity
     - run: dir
     - run: Start-Process -FilePath "C:\Program Files\Unity_2018.4.13f1\Editor\Unity.exe" -ArgumentList '-quit -batchMode -nographics -logfile -createManualActivationFile' -Wait
-    - run: cat Unity_v${{ matrix.unity-version }}.alf
+    - run: cat Unity_v2018.4.13f1.alf
 
   build-windows-test1:
     runs-on: windows-latest
@@ -24,7 +24,7 @@ jobs:
     - run: dir "C:\Program Files\"
     - run: |
         & 'C:\Program Files\Unity_2018.4.13f1\Editor\Unity.exe' -quit -batchMode -nographics -logfile -createManualActivationFile
-    - run: cat Unity_v${{ matrix.unity-version }}.alf
+    - run: cat Unity_v2018.4.13f1.alf
   
   build-windows:
     runs-on: windows-latest
