--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -6,6 +6,9 @@ jobs:
   build-windows-test0:
     runs-on: [ubuntu-latest]
     steps:
+    - uses: actions/setup-ruby@v1
+      with:
+        ruby-version: 3.x
     - run: gem install u3d
     - run: sudo apt-get update
     - run: sudo u3d dependencies
