--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - uses: actions/setup-ruby@v1
       with:
-        ruby-version: 3.x
+        ruby-version: 3.6
     - run: gem install u3d
     - run: sudo apt-get update
     - run: sudo u3d dependencies
