--- a/.github/workflows/CreateLicenseALF.yaml
+++ b/.github/workflows/CreateLicenseALF.yaml
@@ -10,6 +10,10 @@ jobs:
       with:
         ruby-version: 2
     - run: sudo gem install u3d
+    - run: gem environment
+    - run: ls -l /vagrant/ || exit 0
+    - run: ls -l /global/ || exit 0
+    - run: ls -l /Library/Ruby/Gems/ || exit 0
     - run: sudo apt-get update
     - run: sudo apt-get -y install gconf-service lib32gcc1 lib32stdc++6 libasound2 libc6 libc6-i386 libcairo2 libcap2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libfreetype6 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libgl1-mesa-glx libglib2.0-0 libglu1-mesa libgtk2.0-0 libnspr4 libnss3 libpango1.0-0 libstdc++6 libx11-6 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxtst6 zlib1g debconf npm libpq5
     - run: u3d install 2018.2.7f1 --all
